--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "scripts": {
     "lint": "eslint .",
     "start": "micro",
-    "deploy": "now -e NODE_ENV=production && now alias"
+    "deploy": "now -e NODE_ENV=production && vercel alias"
   },
   "main": "index.js",
   "dependencies": {
     "atob": "^2.1.2",
-    "googleapis": "^33.0.0",
+    "googleapis": "^59.0.0",
     "lodash.result": "^4.5.2",
-    "micro": "^9.3.3",
-    "micro-redirect": "^1.0.0"
+    "micro": "^9.3.4",
+    "micro-redirect": "^1.0.2"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   },
   "engines": {
-    "node": "8"
+    "node": "14.x"
   },
   "private": true
 }
